--- a/angular.json
+++ b/angular.json
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "uniprotparser-ng:build:production"
+              "buildTarget": "uniprotparser-ng:build:production"
             },
             "development": {
-              "browserTarget": "uniprotparser-ng:build:development"
+              "buildTarget": "uniprotparser-ng:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "uniprotparser-ng:build"
+            "buildTarget": "uniprotparser-ng:build"
           }
         },
         "test": {
@@ -119,5 +119,13 @@
     "schematicCollections": [
       "@angular-eslint/schematics"
     ]
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
   }
 }
